samples/_failures_safe/1761652006_c50634_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72cd523e.c: In function ‘main’:
./samples/SAFE/__tmp_72cd523e.c:130:9: error: expected expression at end of input
  130 |         printf("%-20s %s\n", "----",
      |         ^~~~~~
./samples/SAFE/__tmp_72cd523e.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_72cd523e.c:130:9: error: expected declaration or statement at end of input
